tests/negative/regression/r6.orng
fn () -> (_ = Bool, _ = String) {}